# rTimelog

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  commit_msg.txt  copilot-custom.json  copilot-custom.md
.github/workflows/: ci.yml  release.yml  rust.yml
scripts/: generate_copilot_md.py
src/: cli.rs  commands.rs  config.rs  db.rs  events.rs  export.rs  lib.rs  logic.rs  main.rs  utils.rs
src/config/: migrate.rs
src/db/: migrate.rs
tests/: common.rs  config_migration_tests.rs  export_extra_tests.rs  export_more_tests.rs  export_tests.rs  integration_tests.rs  logic_tests.rs  missing_event_tests.rs  position_recompute_tests.rs  update_pair_tests.rs  utils_tests.rs
